Se agrega imagenes

--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
                         <img src="./imagenes/bootstrap.png" alt="bootstrap">
                     </td>
                 </tr>
+                <tr>    
+                    <td class="img-container"
+                        data-categoria="IDE's">
+                        <img src="./imagenes/codeblocks.png" alt="codeblocks">
+                    </td>
+                    <td class="img-container"
+                        data-categoria="Back-end">
+                        <img src="./imagenes/lenguaje-java.png" alt="java">
+                    </td>
+                </tr>
             </table>
             
         </section>
