--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                       <a class="nav-link active" href="index.html"><b> FULL-STACK</b></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="" id="back-end"><b> Back-end </b></a>
+                      <a class="nav-link" href="#" id="back-end"><b> Back-end </b></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="" id="front-end"><b> Front-end </b></a>
+                      <a class="nav-link" href="#" id="front-end"><b> Front-end </b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" id="repository"><b> IDE's/Repository</b></a>
+                        <a class="nav-link" href="#" id="repository"><b> IDE's/Repository</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" id="frameworks"><b> Framework's/Library </b></a>
+                        <a class="nav-link" href="#" id="frameworks"><b> Framework's/Library </b></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/proyectos.html" id="projects"><b> Project's</b></a>
