se modifica el css

--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
                 </div>
                 <div>
                     <h2><b>DESARROLLADOR FULL-STACK</b> </h2>
-                    <h5> <br> Alumno del 2do año de la carrera de Tecnicatura Universitaria Superior de Sistemas Informáticos en la UTN-FRGP.
-                        <br>    Actualmente me encuentro cursando Java Script, incluyendo React js en Coder House.  
-                        <br> Estoy en búsqueda de mi primer experiencia como developer.
-                        <br> Pero  desde hace 4 años me desempeño como Technical Support y Help Desk IT </h5>
+                    <h5><small> <br> Alumno del 2do año de la carrera de <strong>Tecnicatura Universitaria Superior de Sistemas Informáticos en la UTN-FRGP.</strong>
+                        <br>    Actualmente me encuentro cursando <strong>Java Script</strong>, incluyendo React js en Coder House.  
+                        <br> Estoy en búsqueda de <strong>mi primer experiencia como developer</strong>.
+                        <br> Pero  desde hace 4 años me desempeño como Technical Support y Help Desk IT, prestando servicio a:
+                        <br><strong>ATOS</strong>
+                        <br><strong>ATENTO</strong>
+                        <br><strong>MEGATECH</strong>
+                        <br><strong>COMPU.NET</strong>
+                    </small>
+                    </h5>
                 </div>
         </header>
     </div>
@@ -68,7 +74,7 @@
     <section class="body-project">
         <div>
             <a name="h1-project">
-                <h1 class="h1-project">PROYECTOS</h1>
+                <h1 class="h1-project"><strong>PROYECTOS</strong></h1>
             </a> 
         </div>
         <div id="box-project">
