se agrega Cotizador de proyectos

--- a/index.html
+++ b/index.html
@@ -85,7 +85,33 @@
                <img class="arrow-up"src="./imagenes/arrow-up-circle-fill.svg" alt="arrow-up">
         </div>
     </div>
-    
+    <div class="cotizador"><br>
+        <h2><strong>COTIZADOR</strong></h2><br>
+        <div class="formulario">
+            <select id='select' class="form-control">
+                <option>Seleccione una App a cotizar</option>
+                <option value="App Web Básico" id="appBasic">App Web Básico</option>
+                <option value="App Web Funcional" id="appFuncional">App Web Funcional</option>
+                <option id="appDesktop">App Escritorio</option>
+                <option id="appConsole">App de Consola</option>
+                <option id="eAsp.net">E-Commerce en ASP.NET</option>
+                <option id="e-commerce">E-Commerce</option>
+            </select>
+        </div><br>
+        <div id="descripcion" class="formulario list-cotizador">
+            <input id="input-tech" class="form-control" type="text" placeholder="Tecnologías a usarse en el desarrollo del proyecto">
+            <!-- <span id="input-tech"></span> -->
+        </div><br>
+        <!-- <div>
+            <button type="button" class="button"><b><strong>Cotizar</strong></b></button>
+        </div><br> -->
+        <div id="precio" class="form-precio">
+            <input style="text-align: center;" class="form-control" type="text" value="$00.00">
+        </div><br>
+    </div>
+    <div>
+        <img class="arrow-up"src="./imagenes/arrow-up-circle-fill.svg" alt="arrow-up">
+    </div>
     <!-- diseño de Popup -->
     <!-- <div class="modal" id="idModal" tabindex="-1" >
         <div class=" box" >
