se agreaga media query en css

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
                             <br>    Hice cursos de <strong>Java Script</strong>, y React js en <strong>Coder House.</strong><br>  
                             <br> Estoy en búsqueda de <strong>mi primer experiencia como developer.</strong><br>
                             <br> Pero  desde hace 4 años me desempeño como Technical Support y Help Desk IT, prestando servicio a:<br>
-                            <br><strong>ATOS -</strong>
-                            <strong>ATENTO - </strong> 
-                            <strong>MEGATECH -</strong>
-                            <strong>COMPU.NET -</strong>
-                            <strong>FREELANCER</strong>
+                            <br>
+                                <strong>ATOS -</strong>
+                                <strong>ATENTO - </strong> 
+                                <strong>MEGATECH -</strong>
+                                <strong>COMPU.NET -</strong>
+                                <strong>FREELANCER</strong>
+                            
                         </small>
                         </h5>
                     </div>
