--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                     <table>
                         <tr>
                             <td>
+                               <a target="_blank" href="./imagenes/CV2021-CarlosJesus.pdf"> <img src="./imagenes/cloud-download-fill.svg"  alt="pdf"></a>
+                            </td>
+                            <td>
                                <a href="https://www.linkedin.com/in/carlos-jesus-4950b8173/"> <img src="./imagenes/linkedin.svg"  alt="in"></a>
                             </td>
                             <td>
